--- a/login.html
+++ b/login.html
@@ -115,4 +115,5 @@
     <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a>
   </footer>
 </body>
+<script src="./login.html"></script>
 </html>
