--- a/patientDatabase.html
+++ b/patientDatabase.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Add Patient</title>
-    <link rel="stylesheet" href="addPatient.css">
+    <title>Patient Database</title>
+    <link rel="stylesheet" href="patientDatabase.css">
 </head>
 <style>
-  /* Common Styling for Both Pages */
+    /* Common Styling for Both Pages */
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -143,36 +143,28 @@ table tr:hover {
 </style>
 <body>
     <header>
-        <h1>Add New Patient</h1>
+        <h1>Patient Database</h1>
         <nav>
             <a href="dashboard.html">Dashboard</a>
-            <a href="patientDatabase.html">Patient Database</a>
+            <a href="addPatient.html">Add Patient</a>
         </nav>
     </header>
     <main>
-        <form id="addPatientForm">
-            <label for="firstName">First Name:</label>
-            <input type="text" id="firstName" placeholder="Enter first name" required>
-            
-            <label for="lastName">Last Name:</label>
-            <input type="text" id="lastName" placeholder="Enter last name" required>
-
-            <label for="dob">Date of Birth:</label>
-            <input type="date" id="dob" required>
-
-            <label for="gender">Gender:</label>
-            <select id="gender" required>
-                <option value="">Select Gender</option>
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-            </select>
-
-            <label for="condition">Condition:</label>
-            <textarea id="condition" placeholder="Enter primary condition"></textarea>
-
-            <button type="submit">Save Patient</button>
-            <button type="reset">Cancel</button>
-        </form>
+        <input type="text" id="searchInput" placeholder="Search by name or ID">
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>DOB</th>
+                    <th>Gender</th>
+                    <th>Condition</th>
+                </tr>
+            </thead>
+            <tbody id="patientTable">
+                <!-- Rows populated by JavaScript -->
+            </tbody>
+        </table>
     </main>
 </body>
 </html>
